# arena

./: notes.txt  setup.cfg
src/: test.py  usage
src/arena/: __init__.py  core.py  extras.py  helpers.py  models.py  test.py  utils.py
src/example/: __init__.py  actors.py  agents.py  domains.py
tests/: core.py
