[metadata]
name = grl-arena
version = 0.0.1
author = Sultan J. Majeed
author_email = sultanjm@gmail.com
description = A flexible framework for learning through interactions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sultanjm/arena
project_urls =
    Bug Tracker = https://github.com/sultanjm/arena/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU GPL3 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src